# stalled-project-news

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: settings.yaml  whitelist.yaml  whitelist.yaml.bak
src/stalled_news/: __main__.py  cli.py  commands.py  config.py  event_extractor.py  events.py  evidence_pipeline.py  extractors.py  fetcher.py  models.py  news_generator.py  openai_client.py  query_pack.py  serp_pipeline.py  serp_wide_pipeline.py  serpapi_client.py  whitelist.py  whitelist_helpers.py
src/stalled_project_news.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_query_pack.py  test_whitelist.py
